# Mycode

./: .gcloudignore  .gitignore  MERGE_SUCCESS_REPORT.md  PUSH_SUCCESS_REPORT.md  README.md  check-before-push.ps1  push-to-git.ps1  quick-push.ps1
telegram/telegram-cpp-graph-service/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile
telegram/telegram-cpp-graph-service/benchmarks/: README.md  graph_store_baseline.json
telegram/telegram-cpp-graph-service/scripts/: check_graph_bench.sh  ci_verify_graph.sh  graph_pressure.sh  report_graph.sh  run_graph_sanitizers.sh  update_graph_bench_baseline.sh
telegram/telegram-cpp-graph-service/scripts/perf/: check_graph_bench.sh  report_graph.sh  update_graph_bench_baseline.sh
telegram/telegram-cpp-graph-service/scripts/verify/: ci_verify_graph.sh  run_graph_sanitizers.sh
telegram/telegram-cpp-graph-service/src/: main.cpp
telegram/telegram-cpp-graph-service/src/config/: config.cpp  config.h
telegram/telegram-cpp-graph-service/src/contracts/: types.h
telegram/telegram-cpp-graph-service/src/graph/: graph_store.cpp  graph_store.h  ranking.h
telegram/telegram-cpp-graph-service/src/grpc/: graph_service_impl.h
telegram/telegram-cpp-graph-service/src/http/: graph_routes.cpp  graph_routes.h  http_server.cpp  http_server.h  request_validation.cpp  request_validation.h
telegram/telegram-cpp-graph-service/src/ops/: metrics.cpp  metrics.h
telegram/telegram-cpp-graph-service/src/snapshot/: backend_snapshot_client.cpp  backend_snapshot_client.h  snapshot_loader.cpp  snapshot_loader.h
telegram/telegram-cpp-graph-service/src/telemetry/: meter.h  metrics.h  span.h  tracer.h  types.h
telegram/telegram-cpp-graph-service/tests/: graph_store_bench.cpp  graph_store_tests.cpp
telegram/telegram-cpp-graph-service/tests/bench/: graph_bench_dataset.h  graph_bench_runner.h  graph_bench_schema.h
telegram/telegram-rust-gateway/: Cargo.toml  Dockerfile
telegram/telegram-rust-gateway/benchmarks/: realtime_gateway_baseline.json
telegram/telegram-rust-gateway/src/: bootstrap.rs  config.rs  control_plane.rs  cors.rs  error.rs  handlers.rs  main.rs  perf_fixture.rs  presence_router.rs  probes.rs  realtime_ops.rs  request_context.rs  state.rs  traffic_policy.rs
telegram/telegram-rust-gateway/src/auth/: jwt.rs
telegram/telegram-rust-gateway/src/core/: bootstrap.rs  mod.rs  state.rs
telegram/telegram-rust-gateway/src/http/: cors.rs  handlers.rs  mod.rs  ops_auth.rs  ops_handlers.rs  probes.rs  proxy_handler.rs  proxy_support.rs
telegram/telegram-rust-gateway/src/ingress/: ingress_audit.rs  ingress_commands.rs  mod.rs  rate_limit.rs  request_context.rs  traffic_policy.rs
telegram/telegram-rust-gateway/src/ops/: mod.rs  realtime_ops.rs
telegram/telegram-rust-gateway/src/realtime/: fanout_bridge.rs  mod.rs  realtime_auth.rs  realtime_consumer.rs  realtime_contracts.rs  session_registry.rs
telegram/telegram-rust-recommendation/: Cargo.toml  Dockerfile
telegram/telegram-rust-recommendation/src/: backend_client.rs  config.rs  contracts.rs  main.rs  metrics.rs  pipeline.rs
telegram/telegram-rust-recommendation/src/adapters/: backend_client.rs  mod.rs
telegram/telegram-rust-recommendation/src/candidate_hydrators/: mod.rs  post_selection.rs
telegram/telegram-rust-recommendation/src/candidate_pipeline/: boundary.rs  definition.rs  manifest.rs  mod.rs  pipeline.rs  stage_aggregation.rs
telegram/telegram-rust-recommendation/src/clients/: backend_client.rs  graph_kernel_client.rs
telegram/telegram-rust-recommendation/src/config/: mod.rs
telegram/telegram-rust-recommendation/src/contracts/: algorithm.rs  candidate.rs  graph_provider.rs  mod.rs  ops.rs  pipeline.rs  query.rs
telegram/telegram-rust-recommendation/src/filters/: mod.rs  post_selection.rs
telegram/telegram-rust-recommendation/src/http/: handlers.rs  mod.rs  state.rs  types.rs
telegram/telegram-rust-recommendation/src/news_trends/: contracts.rs  mod.rs
telegram/telegram-rust-recommendation/src/ops/: metrics.rs
telegram/telegram-rust-recommendation/src/pipeline/: builder.rs  definition.rs  executor.rs  mod.rs  utils.rs
telegram/telegram-rust-recommendation/src/query_hydrators/: mod.rs
telegram/telegram-rust-recommendation/src/replay/: contracts.rs  evaluator.rs  mod.rs  tests.rs
telegram/telegram-rust-recommendation/src/runtime/: versions.rs
telegram/telegram-rust-recommendation/src/scorers/: mod.rs
telegram/telegram-rust-recommendation/src/selectors/: mod.rs  top_k.rs
telegram/telegram-rust-recommendation/src/server/: auth.rs  handlers.rs  mod.rs  runtime.rs  state.rs  types.rs
telegram/telegram-rust-recommendation/src/serving/: cache.rs  cursor.rs  dedup.rs  mod.rs  policy.rs  stable_order.rs
telegram/telegram-rust-recommendation/src/side_effects/: mod.rs  runtime.rs
telegram/telegram-rust-recommendation/src/sources/: contracts.rs  mod.rs  orchestrator.rs
telegram/telegram-rust-recommendation/src/state/: mod.rs  recent_store.rs
telegram/telegram-rust-recommendation/tests/fixtures/: algorithm_contract_sample.json  replay_scenarios.json  replay_user_state_matrix.json  replay_warm_user.json
telegram/telegram-rust-workspace/: Cargo.toml  README.md  workspace-migration-readiness.md  workspace-transition.json
telegram/telegram-rust-workspace/crates/telegram-component-primitives/: Cargo.toml
telegram/telegram-rust-workspace/crates/telegram-filter-primitives/: Cargo.toml
telegram/telegram-rust-workspace/crates/telegram-pipeline-primitives/: Cargo.toml
telegram/telegram-rust-workspace/crates/telegram-ranking-primitives/: Cargo.toml
telegram/telegram-rust-workspace/crates/telegram-recommendation-contracts/: Cargo.toml
telegram/telegram-rust-workspace/scripts/: boundary-gate.sh  check-change-boundaries.sh  check-node-recommendation-freeze.mjs  check-recommendation-boundaries.sh  check-recommendation-contract-schema.mjs  check-service-boundaries.sh  check-workspace-deps.sh  check-workspace-migration.sh  quality-gate.sh  quick-gate.sh  recommendation-contract-gate.sh  release-preflight-gate.sh  replay-gate.sh
(+2536 files in other folders)
