[package]
name = "telegram-rust-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
