[package]
name = "telegram-rust-recommendation"
version.workspace = true
edition.workspace = true
publish.workspace = true
workspace = "../telegram-rust-workspace"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
telegram-component-primitives.workspace = true
telegram-filter-primitives.workspace = true
telegram-pipeline-primitives.workspace = true
telegram-ranking-primitives.workspace = true
telegram-recommendation-contracts.workspace = true
telegram-recommendation-fixtures.workspace = true
telegram-runtime-primitives.workspace = true
telegram-rust-http-types.workspace = true
telegram-selector-primitives.workspace = true
telegram-serving-primitives.workspace = true
telegram-source-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
