[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telegram-component-primitives = { path = "crates/telegram-component-primitives" }
telegram-filter-primitives = { path = "crates/telegram-filter-primitives" }
telegram-pipeline-primitives = { path = "crates/telegram-pipeline-primitives" }
telegram-ranking-primitives = { path = "crates/telegram-ranking-primitives" }
telegram-recommendation-contracts = { path = "crates/telegram-recommendation-contracts" }
telegram-recommendation-fixtures = { path = "crates/telegram-recommendation-fixtures" }
telegram-runtime-primitives = { path = "crates/telegram-runtime-primitives" }
telegram-rust-http-types = { path = "crates/telegram-rust-http-types" }
telegram-selector-primitives = { path = "crates/telegram-selector-primitives" }
telegram-serving-primitives = { path = "crates/telegram-serving-primitives" }
telegram-source-primitives = { path = "crates/telegram-source-primitives" }
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
