[package]
name = "telegram-recommendation-fixtures"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
telegram-component-primitives.workspace = true
telegram-recommendation-contracts.workspace = true

[lints]
workspace = true
