[package]
name = "telegram-thunder-store"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dashmap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true
