[package]
name = "chat_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Crypto dependencies
chacha20poly1305 = "0.10"
